[package]
name = "nature_integrate_test_executor"
version = "0.22.2"
authors = ["XueBin Li <llxxbb@yeah.net>"]
edition = "2018"
description = "Local Executors used by Nature Test"
repository = "https://github.com/llxxbb/Nature-Integrate-Test-Executor"
license = "MIT"


[dependencies]
nature = { path = "../Nature", version = "0.22.2" }

[lib]
crate-type = ["cdylib"]